Added defer to script tag so the querySelectorAll comes back with a value other than null. Added a .forEach listener event for the buttons within the input id.

--- a/calculator.css
+++ b/calculator.css
@@ -36,7 +36,7 @@ button {
  font-size: larger;
 }
 
-#equals {
+.equals {
     grid-row: span 2;
     color: hotpink;
     background-color: black;
@@ -48,6 +48,6 @@ button {
     background-color: black;
     border:solid 2px hotpink;
 }
-#zero {
+.zero {
     grid-column: span 2;
 }
