--- a/calculator.css
+++ b/calculator.css
@@ -27,20 +27,21 @@
     grid-template-rows: repeat(5, 1fr);
     margin:25px;
     height: 400px;
-    gap: 10px; 
+ 
 }
 
 button {
  background-color: hotpink;
  color: black;
  font-size: larger;
+ border: solid 5px black;
 }
 
 .equals {
     grid-row: span 2;
     color: hotpink;
     background-color: black;
-    border:solid 2px hotpink;
+    border:solid 5px hotpink;
 }
 
 #operator {
@@ -48,6 +49,6 @@ button {
     background-color: black;
     border:solid 2px hotpink;
 }
-.zero {
+#zero {
     grid-column: span 2;
 }
